# gemini-live-agent-challenge

./: .dockerignore  .gcloudignore  .gitignore  BASELINE.md  Dockerfile  README.md  pyproject.toml
app/: .env.template  main.py
app/menu_translator_final/: __init__.py  agent.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
docs/: DEVPOST_TEXT_DESCRIPTION.md  GIT_GUIDE.md
scripts/: deploy.sh
